<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Order.OrderFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        app:srcCompat="@drawable/unnamed__1_" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="154dp"
                        android:text="@string/PapayaSalad"
                        android:textAlignment="center"
                        app:fontFamily="sans-serif-black" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="243dp"
                        app:srcCompat="@drawable/unnamed" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="214dp"
                        android:text="@string/YumSeafood"
                        android:textAlignment="center"
                        app:fontFamily="sans-serif-black" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="272dp"
                        app:srcCompat="@drawable/happyfresh_thai_green_curry_with_chicken_940x700" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="158dp"
                        android:text="@string/Greencurry"
                        android:textAlignment="center"
                        app:fontFamily="sans-serif-black" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="191dp"
                        app:srcCompat="@drawable/hc_cuisine_14s" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:text="@string/PadThai"
                        android:textAlignment="center"
                        app:fontFamily="sans-serif-black" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="287dp"
                        app:srcCompat="@drawable/tomyam" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="265dp"
                        android:text="@string/TomYumKung"
                        android:textAlignment="center"
                        app:fontFamily="sans-serif-black" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        app:srcCompat="@drawable/shutterstock_280684463_1" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:text="@string/FriedRice"
                        android:textAlignment="center"
                        app:fontFamily="sans-serif-black" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>